force-app/main/default/objects/House_Hold_Link__c/House_Hold_Link__c.object-meta.xml
<CustomObject>
    <label>House Hold Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>House Hold Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>