force-app/main/default/objects/House_Hold_Link__c/fields/Currentnetvalue__c.field-meta.xml
<CustomField>
    <fullName>Currentnetvalue__c</fullName>
    <label>Current Net value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>