force-app/main/default/objects/House_Hold_Link__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Household__c</referenceTo>
    <relationshipLabel>House Hold Links</relationshipLabel>
    <relationshipName>House_Hold_Links</relationshipName>
    <type>Lookup</type>
</CustomField>