force-app/main/default/objects/House_Hold_Link__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <externalId>true</externalId>
    <label>Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>