force-app/main/default/objects/House_Hold_Link__c/fields/Institution_Id__c.field-meta.xml
<CustomField>
    <fullName>Institution_Id__c</fullName>
    <label>Institution Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>