force-app/main/default/objects/House_Hold_Link__c/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <label>Last  Update</label>
    <type>DateTime</type>
</CustomField>